# FractalCreator

./: Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  CMakeLists.txt  FractalCreator.cpp  FractalCreator.h  Mandelbrot.cpp  Mandelbrot.h  README.md  RGB.cpp  RGB.h  Zoom.h  ZoomList.cpp  ZoomList.h  main.cpp
